--- a/index.html
+++ b/index.html
@@ -1,19 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to my world</title>
+    <title>Welcome to My World</title>
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400&display=swap" rel="stylesheet">
 </head>
-<body>
-    Hello everyone, my name is jamar jack. IM 32 years old, I am a navy vet.I have a BS in culinary arts and now im on an different adventure to learn coding hope everyone enjoys the ride with me.
 
+<body></body>
+   <p> 
+     Hello World, I am known as Jamar Jack,
+     some of my friends call me foot (why ?...till this day the world my never now). 
+     32 is my current age, I've traveled most of the world due to military obligations.  
+     After my timed served, I obtained my AA in Culinary Arts. 
+     These days im on an different adventure to learn coding, which i believe will take  me to higher heights!!
+    </p>
     <div class="container">
         <div class="row">
           <div class="logo-wrapper col-12 col-sm-3 col-md-3">
-                <a href="http://www.nba.2k.com/us" target="_blank" >
-                    ><img src="https://images.app.goo.gl/jcXGTDbyzcqXDPQZ8" alt="2k22 logo">
-                </a>
+                <a href="https://www.deseret.com/sports/2021/7/14/22576034/nba-2k22-cover-athlete-luka-kevin-durant" target="_blank" >
+                <img src="../prework/images/nba_2k22.webp" alt="2k22 logo">
+            </div>
+        </div>
+    </div>        
 </body>
 </html>
